--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>網站標題</title>
+<title>靜態網頁</title>
 <style>
-h1 {
-  color: yellow;
+body{
+	background-color:LightGray
 }
+
+h1 {
+  color: blue;
+}
+
 </style>
 </head>
 <body>
@@ -14,7 +19,7 @@ h1 {
 <h1>這是一個靜態網頁</h1>
 <p>課程:網頁安全</p>
 <p>由B10730023粘哲瑋撰寫</p>
-<a href="網址">無效連結</a>
+<a href="https://github.com/Nien0023/Nien0023.github.io">Github專案</a>
 <br>
 <br>
 <button onclick="click()">點擊我(無效)</button>
